--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,8 +18,22 @@
     "resolveJsonModule": true,
     "isolatedModules": true,
     "noEmit": true
-  },
-  "include": [
-    "src"
-  ]
-}
+    {
+      "compilerOptions": {
+        "target": "es2016",
+        "module": "esnext",
+        "esModuleInterop": true,
+        "forceConsistentCasingInFileNames": true,
+        "strict": true,
+        "skipLibCheck": true,
+        "jsx": "react-jsx",
+        "lib": ["dom", "dom.iterable", "esnext"],
+        "allowJs": true,
+        "allowSyntheticDefaultImports": true,
+        "moduleResolution": "node",
+        "resolveJsonModule": true,
+        "isolatedModules": true,
+        "noEmit": true
+      },
+      "include": ["src", "node_modules/axios"]
+    }
